wordpress-example/manifests/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
